@@ -1,2 +1,3 @@
 DIST hfst-3.8.1.tar.gz 3169213 SHA256 56c2ec8b571385ab5aa595579840057d70dd6262f3fad4519907f6bdf6752363 SHA512 5deaea24dc6939d63e396bc94b417d36a7a0faa66af2e6edb25b0ef69fbe5b115f43853f9099ec412150c345ff8f878c27b673c0b4e5f6d3afbf2fa97fcfa04a WHIRLPOOL f1c113bc6e0739d4a3c7b242b2a38137e4ee57655b76551af72983f66bd304dbc25a478090aea19263472d1382cdfb56676116adc108579e08a3fb799ad6a0c4
 DIST hfst-3.8.2.tar.gz 3158251 SHA256 bdae235271368a8d13db4a224fe8a53cf7266b8fce194cf63c96031e007e3d63 SHA512 415fafd38259f1c4580aa833c23d8315c605e44752380243c514783f657bae996b8a4af424faf830f6d8f5df90a4d849d8487858ce691dae8993dc8656132c9a WHIRLPOOL 28d5cbd8da1b58554a570797e188442489844316f164cd362cd332667d6f3a6ee164bfc7f83a1ef7bfafbe6ff4fa3b59e0cbf85f250933033a0e8efad08bed57
+DIST hfst-3.8.3.tar.gz 3229628 SHA256 55b1477eb41960cf04313856f4912381e6fb17e9505f1fb674ed99d6e1cce35d SHA512 b742c62a2aa67a41bc191df17d0e270c9d536f47bf382e4bfb49f7efa19f6236e6bbb30a0fa8554af70c6b8f7a00abf1fdd96de9903c26a8db639bf15298431d WHIRLPOOL fc4d0eef203b41b80feaa646cdc675b80036795016dcff2e67dc89b7155223afe19544af61ad12e3e5c27580db9f64480bb3e8dec68436454f7a57c247c2e737
